@@ -199,6 +199,10 @@
 
       \item \code{regmatches(invert = NA)} can now be used to extract
       both non-matched and matched substrings.
+
+      \item \code{data.frame()} gains argument \code{fix.empty.names};
+      \code{as.data.frame.list()} gets new \code{cut.names},
+      \code{col.names} and \code{fix.empty.names}.
     }
   }
 
@@ -311,6 +315,9 @@
 
       \item \code{tail.matrix()} did not work for zero rows matrices,
       and produced \code{"[1e+05,]"} row \dQuote{labels}.
+
+      \item Data frames with column name \code{"StringsAsFactors"} now
+      format and print correctly.  (\PR{16580})
     }
   }
 }
@@ -468,7 +475,7 @@
       \item If the expression in the traceback was too long,
       \code{traceback()} did not report the source line number.  (Patch
       by Kirill Müller.)
-      
+
       \item The browser did not truncate the display of the function when
       exiting with \code{options("deparse.max.lines")} set.
       (\PR{16581})
